--- a/systemd/multicraft.service
+++ b/systemd/multicraft.service
@@ -7,8 +7,8 @@ User=root
 WorkingDirectory=/srv/multicraft
 ExecStartPre=/usr/bin/rm -f /srv/multicraft/multicraft.pid
 PIDFile=/srv/multicraft/multicraft.pid
-ExecStart=/srv/multicraft/bin/multicraft start
-ExecStop=/srv/multicraft/bin/multicraft stop
+ExecStart=/srv/multicraft/bin/multicraft -v start
+ExecStop=/srv/multicraft/bin/multicraft -v stop
 Restart=on-failure
 
 [Install]
